src/test/resources/frontend/fail/unaryMap.skill
Fail {
	/** maps cannot be unary */
	map<string> nested;
}
